--- a/practica1/css/estilos.css
+++ b/practica1/css/estilos.css
@@ -75,9 +75,22 @@ body {
    Carrusel imágenes uniformes
 ========================== */
 .carousel-item img {
-  height: 250px;        /* altura fija */
-  object-fit: cover;    /* recorta sin deformar */
+  height: 250px;
+  object-fit: cover;  
   width: 100%;
+}
+
+h5 {
+  color: #0077b6;
+  font-weight: bold;
+  margin-top: 10px;
+  text-align: center;
+}
+
+p {
+  color: #555;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 /* ==========================
@@ -141,6 +154,43 @@ section p.lead {
   color: #555;
 }
 
+
+#sobreNosotros h2 {
+  font-weight: bold;
+  color: #0077b6;
+}
+
+#sobreNosotros p.lead {
+  color: #555;
+  text-align: justify;
+}
+
+#sobreNosotros .card {
+  border: none;
+  border-radius: 12px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+#sobreNosotros .card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+}
+
+#mision {
+  color: #555;
+  text-align: justify;
+}
+
+#vision {
+  color: #555;
+  text-align: justify;
+}
+
+#valores {
+  color: #555;
+  text-align: justify;
+}
+
 /* ==========================
    Tabla de clientes
 ========================== */
@@ -170,6 +220,11 @@ form input, form select, form textarea {
   border-radius: 8px;
 }
 
+#formularioRegistro {
+  width: 550px;
+
+}
+
 /* ==========================
    Alertas (Contacto)
 ========================== */
@@ -181,6 +236,49 @@ form input, form select, form textarea {
   gap: 8px;
 }
 
+/* ==========================
+  Fotos
+========================== */
+#fotos {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
+/* ==========================
+  Footer
+========================== */
+footer {
+    border-top: 1px solid #444; 
+}
+
+footer .footer-link {
+    text-decoration: none; 
+    transition: color 0.3s ease; 
+}
 
 
+footer .footer-link:hover {
+    color: #007bff !important; 
+}
 
+footer .footer-link-brand {
+    text-decoration: none; 
+}
+
+footer .social-icon {
+    font-size: 20px; 
+    margin: 0 8px; 
+    transition: color 0.3s ease; 
+}
+
+footer .social-icon:hover {
+    color: #007bff !important; 
+}
+
+footer p i {
+    margin-right: 10px; 
+    min-width: 20px; 
+    text-align: center;
+}
